syntax = "proto3";
package pb;

option go_package = "internal/infra/grpc/pb";

message CreateMovieRequest {
  string id = 1;
  string title = 2;
  string director = 3;
  string writer = 4;
  string link = 5;
  float duration = 6;
}

message CreateMovieResponse {
  string id = 1;
  string title = 2;
  string director = 3;
  string writer = 4;
  string link = 5;
  float duration = 6;
}

service MovieService {
  rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse);
}
